client/site/src/Bio/styles.less
.bio {
  width: 60%;
  text-align: left;
  display: inline-block;
}

