fix bio length on mobile

--- a/client/site/src/Bio/styles.less
+++ b/client/site/src/Bio/styles.less
@@ -1,5 +1,13 @@
 .bio {
-  width: 60%;
+  width: 95%;
   text-align: left;
   display: inline-block;
+}
+
+@media (min-width: 50em) {
+  .bio {
+    width: 60%;
+    text-align: left;
+    display: inline-block;
+  }
 }
